# SiteSureLabs

./: .env.example  .gitignore  .tmp-lighthouse-home-after.json  .tmp-lighthouse-home.json  README.md  prompt_to_place_image.md  prompts.md  pyproject.toml  setup.md
backend/: config.py  db.py  main.py  prompt.py  promptpy_original.py  requirements.txt
backend/models/: __init__.py  defect.py  user.py  user_log.py
backend/routes/: admin.py  assistant.py  auth.py  chat.py  defect.py
backend/services/: generate_client.py  image_format.py  inspection_chat_service.py  inspection_markdown.py  inspection_sessions.py  landing_assistant_service.py
backend/utils/: deps.py  security.py
frontend/: .env.example  a.txt  ai-analysis.js  app.js  assistant-widget.css  assistant-widget.js  heic-utils.js  hero-bg.js  how-it-works-section.txt  image-analysis.js  index.html  insp-clean-chat.css  landing.js  live.js  package-lock.json  package.json  remote-camera.js  style.css  vercel.json  vite.config.js
frontend/admin/: index.html
frontend/admin/login/: index.html
frontend/dashboard/ai-analysis/: index.html
frontend/dashboard/image-analysis/: index.html
frontend/dashboard/live/: index.html
frontend/login/: index.html
frontend/register/: index.html
frontend/shared/: auth.js  format-api-detail.js  password-toggle.js  profile-nav.js  profile-photo-cropper.js  styles.css
frontend/shared/components/: dashboard-footer.js  dashboard-nav.js
